progetti/uni/applied_sec_lab/app-sec-lab/tables/firewall.v4
# Generated by iptables-save v1.6.0 on Mon Nov 18 14:52:17 2019
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [22:21972]
:POSTROUTING ACCEPT [2:120]
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.42.42.42
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.42.45.2
-A POSTROUTING -d 10.42.42.42/32 -o enp0s9 -p tcp -m tcp --dport 443 -j SNAT --to-source 10.42.42.1
-A POSTROUTING -d 10.42.45.2/32 -o enp0s11 -p tcp -m tcp --dport 22 -j SNAT --to-source 10.42.45.1
COMMIT
# Completed on Mon Nov 18 14:52:17 2019
# Generated by iptables-save v1.6.0 on Mon Nov 18 14:52:17 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [22:18060]
:LOGGING - [0:0]
-A INPUT -i enp0s11 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -j LOGGING
-A FORWARD -i enp0s8 -o enp0s9 -p tcp -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i enp0s8 -o enp0s9 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s9 -o enp0s8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s8 -o enp0s11 -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i enp0s8 -o enp0s11 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s11 -o enp0s8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s11 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s10 -p tcp -m state --state NEW -m tcp --dport 514 -j ACCEPT
-A OUTPUT -o enp0s10 -p tcp -m state --state NEW -m tcp --sport 514 -j ACCEPT
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
-A LOGGING -j DROP
COMMIT
# Completed on Mon Nov 18 14:52:17 2019
